--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@
           </div>
         </div>
       </div>
+      <div class="mainTopTitle">
+        <div class="toFitIn"><h3>FEATURED & RECOMMENDED</h3></div>
+      </div>
+      <div class="fourButtonses">
+        <div class="fourButtonContainer">
+          <button class="fourButtons">New Releases</button>
+          <button class="fourButtons">Specials</button>
+          <button class="fourButtons">Free Games</button>
+          <button class="fourButtons">By User Tags</button>
+        </div>
+      </div>
+
       <div class="mainBottomest">
         <div class="insideMainBottomest">
           <h2><span>Looking for recommendations?</span></h2>
